fixed alignment

--- a/frontend/src/styles/z_media-queries.scss
+++ b/frontend/src/styles/z_media-queries.scss
@@ -318,6 +318,7 @@
         font-size: 0.8rem;
         line-height: 0.8rem;
         &.account {
+          margin-top: 0.05rem;
           .text {
             display: none;
           }
